--- a/documentation.ipynb
+++ b/documentation.ipynb
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. <u> *LowRank* class </u>\n",
+    "## 1. *LowRank* class \n",
     "\n",
     "\n",
     "The *LowRank* classes instanciate of low rank approximation representation of a $\\mathcal{GP}$. Right now using :\n",
